<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="game"
            type="com.alurwa.gamecatalogue.model.Game" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DetailActivity">

            <ImageView
                android:id="@+id/img_poster"
                posterImage="@{game.posterRes}"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/img_poster_desc"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/just_cause_2" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{game.title}"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/img_star"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toTopOf="@id/img_poster"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Just Cause 2" />

            <ImageView
                android:id="@+id/img_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/detail_star_icon"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@id/img_poster"
                app:layout_constraintStart_toEndOf="@+id/img_poster"
                app:layout_constraintTop_toBottomOf="@+id/txt_title"
                app:srcCompat="@drawable/ic_round_star_24"
                app:tint="@color/yellow" />

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@{game.score.toString()}"
                android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/img_star"
                app:layout_constraintStart_toEndOf="@+id/img_star"
                app:layout_constraintTop_toTopOf="@id/img_star"
                tools:text="8.9" />

            <TextView
                android:id="@+id/txt_overview_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/detail_overview_header"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_poster" />

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@{game.overview}"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_overview_header"
                tools:text="Lorem Ipsum" />

            <TextView
                android:id="@+id/txt_genres_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/game_genre_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_overview" />

            <TextView
                android:id="@+id/txt_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:text="@{game.genres}"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_genres_header"
                tools:text="FPS" />

            <TextView
                android:id="@+id/txt_first_release_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/game_first_release"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_genres" />

            <TextView
                android:id="@+id/txt_first_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:text="@{game.firstRelease}"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_first_release_header"
                tools:text="FPS" />


            <TextView
                android:id="@+id/txt_publisher_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/game_publisher_header"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_first_release" />

            <TextView
                android:id="@+id/txt_publisher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:text="@{game.publisher}"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_publisher_header"
                tools:text="FPS" />

            <TextView
                android:id="@+id/txt_developer_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/game_developer"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_publisher" />

            <TextView
                android:id="@+id/txt_developer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{game.developer}"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_developer_header"
                tools:text="FPS" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>

